# resume_parser_framework

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: api-test.md  code_review.md  document-feature.md
.github/workflows/: ci.yml
app/: __init__.py
app/config/: __init__.py  logging_config.py  settings.py
app/core/: __init__.py  framework.py  resume_extractor.py
app/core/extractors/: __init__.py  base.py  education_extractor.py  email_extractor.py  experience_extractor.py  name_extractor.py  phone_extractor.py  skills_extractor.py
app/core/models/: __init__.py  resume_data.py
app/core/parsers/: __init__.py  base.py  pdf_parser.py  word_parser.py
app/exceptions/: __init__.py  exceptions.py
app/prompts/: __init__.py  resume_extraction_prompts.py
app/utils/: __init__.py  validators.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.prod.yml  docker-compose.yml
examples/: __init__.py  parse_pdf_resume.py  parse_word_resume.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_framework.py
tests/unit/: test_extractors.py  test_field_extractor_base.py  test_file_parser_base.py  test_framework.py  test_models.py  test_parsers.py  test_prompts.py  test_resume_extractor.py  test_validators.py
